--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ hilt = "2.56.1"
 ktor = "3.1.2"
 ksp = "2.1.20-2.0.0"
 webkit = "1.12.1"
-newpipe = "dev-SNAPSHOT"
+newpipe = "bc9a5a220e"
 
 [libraries]
 annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
