--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Build universal debug APK
         run: ./gradlew assembleUniversalDebug
+        env:
+           GITHUB_EVENT_NAME: ${{ github.event_name }}
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
