--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -2,7 +2,16 @@ name: Move Java to Kotlin Folder
 
 on:
   workflow_dispatch:
-
+  push:
+    branches: [ '**' ]
+    paths-ignore:
+      - 'README.md'
+      - 'fastlane/**'
+      - 'assets/**'
+      - '.github/**/*.md'
+      - '.github/FUNDING.yml'
+      - '.github/ISSUE_TEMPLATE/**'
+      
 jobs:
   move-files:
     runs-on: ubuntu-latest
