--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,30 @@
 [versions]
-androidGradlePlugin = "8.12.0-alpha04"
+androidGradlePlugin = "8.7.3"
 annotation = "1.9.1"
 json = "20250517"
-kotlin = "2.2.0-RC2"
-compose = "1.9.0-alpha04"
+kotlin = "2.1.0"
+compose = "1.8.2"
 lifecycle = "2.9.1"
-material3 = "1.4.0-alpha15"
-materialKolor = "3.0.0-beta05"
-media3 = "1.8.0-alpha01"
+material3 = "1.3.1"
+materialKolor = "3.0.0"
+media3 = "1.8.0"
 room = "2.7.1"
 hilt = "2.56.2"
 ktor = "3.2.0"
-ksp = "2.2.0-RC2-2.0.2"
+ksp = "2.1.0-1.0.29"
 kuromojiIpadic = "0.9.0"
 
 [libraries]
 annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
 guava = { group = "com.google.guava", name = "guava", version = "33.4.8-jre" }
 coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version = "1.10.2" }
-concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.3.0-beta01" }
+concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.3.0" }
 
 gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
-activity = { group = "androidx.activity", name = "activity-compose", version = "1.12.0-alpha02" }
+activity = { group = "androidx.activity", name = "activity-compose", version = "1.12.0" }
 navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.9.0" }
-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.3.0-alpha01" }
-datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.2.0-alpha02" }
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.3.0" }
+datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.2.0" }
 
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
 compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
@@ -47,7 +47,7 @@ coil = { group = "io.coil-kt", name = "coil-compose", version = "2.7.0" }
 
 shimmer = { group = "com.valentinilk.shimmer", name = "compose-shimmer", version = "1.3.3" }
 
-palette = { group = "androidx.palette", name = "palette", version = "1.0.0" }
+palette = { group = "androidx.palette", name = "palette-ktx", version = "1.0.0" }
 
 media3 = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
 media3-okhttp = { group = "androidx.media3", name = "media3-datasource-okhttp", version.ref = "media3" }
@@ -63,7 +63,7 @@ hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
-ktor_client_cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-encoding = { group = "io.ktor", name = "ktor-client-encoding", version.ref = "ktor" }
