--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,11 +6,11 @@ kotlin = "2.1.0"
 compose = "1.8.2"
 lifecycle = "2.9.1"
 material3 = "1.3.1"
-materialKolor = "3.0.0"
-media3 = "1.8.0"
+materialKolor = "3.0.0-beta05"
+media3 = "1.7.1"
 room = "2.7.1"
 hilt = "2.56.2"
-ktor = "3.2.0"
+ktor = "2.3.12"
 ksp = "2.1.0-1.0.29"
 kuromojiIpadic = "0.9.0"
 
@@ -18,13 +18,13 @@ kuromojiIpadic = "0.9.0"
 annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
 guava = { group = "com.google.guava", name = "guava", version = "33.4.8-jre" }
 coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version = "1.10.2" }
-concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.3.0" }
+concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.2.0" }
 
 gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
-activity = { group = "androidx.activity", name = "activity-compose", version = "1.12.0" }
+activity = { group = "androidx.activity", name = "activity-compose", version = "1.9.3" }
 navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.9.0" }
-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.3.0" }
-datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.2.0" }
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.0.0" }
+datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.1.1" }
 
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
 compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
