--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "8.10.0"
+androidGradlePlugin = "8.12.0-alpha05"
 annotation = "1.9.1"
 json = "20250517"
 kotlin = "2.2.0-RC2"
@@ -10,7 +10,7 @@ materialKolor = "3.0.0-beta05"
 media3 = "1.8.0-alpha01"
 room = "2.7.1"
 hilt = "2.56.2"
-ktor = "3.2.0"
+ktor = "3.1.3"
 ksp = "2.2.0-RC2-2.0.2"
 kuromojiIpadic = "0.9.0"
 
