--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ hilt = "2.57"
 ktor = "3.2.2"
 ksp = "2.2.20-Beta1-2.0.2"
 jsoup = "1.21.1"
+newpipe = "dev-SNAPSHOT"
 kuromojiIpadic = "0.9.0"
 multidex = "2.0.1"
 
@@ -86,7 +87,7 @@ timber = { group = "com.jakewharton.timber", name = "timber", version = "5.0.1" 
 multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
 
 #newpipe-extractor = { group = "com.github.libre-tube", name = "NewPipeExtractor", version = "dev-SNAPSHOT" }
-newpipe-extractor = { group = "com.github.TeamNewPipe", name = "NewPipeExtractor", version = "dev-SNAPSHOT" }
+newpipe-extractor = { group = "com.github.teamnewpipe", name = "NewPipeExtractor", version.ref = "newpipe" }
 
 kuromoji-ipadic = { group = "com.atilika.kuromoji", name = "kuromoji-ipadic", version.ref = "kuromojiIpadic" }
 
