Fix YAML syntax error in .gitlab-ci.yml
- Fix mapping values error at line 154
- Use multiline YAML syntax (|) for shell script block
- Correct indentation for find command with while loop
- Pipeline should now create successfully

The error was caused by improper YAML formatting
of the shell script block in collect_apks job.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,7 +150,8 @@ collect_apks:
   script:
     - echo "Collecting all built APKs..."
     - mkdir -p release_apks
-    - find app/build/outputs/apk/ -name "*.apk" -type f | while read apk; do
+    - |
+      find app/build/outputs/apk/ -name "*.apk" -type f | while read apk; do
         echo "Found APK: $apk"
         cp "$apk" release_apks/ || echo "Failed to copy $apk"
       done
