--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,15 +148,15 @@ collect_apks:
   stage: collect
   image: alpine:latest
   script:
-    - echo "Collecting all built APKs..."
-    - mkdir -p release_apks
     - |
+      echo "Collecting all built APKs..."
+      mkdir -p release_apks
       find app/build/outputs/apk/ -name "*.apk" -type f | while read apk; do
         echo "Found APK: $apk"
         cp "$apk" release_apks/ || echo "Failed to copy $apk"
       done
-    - ls -la release_apks/
-    - echo "Total APKs collected: $(ls -1 release_apks/*.apk 2>/dev/null | wc -l)"
+      ls -la release_apks/
+      echo "Total APKs collected: $(ls -1 release_apks/*.apk 2>/dev/null | wc -l)"
   artifacts:
     paths:
       - release_apks/
@@ -180,8 +180,8 @@ create_release:
   before_script:
     - apk add --no-cache curl jq
   script:
-    - echo "Creating GitLab release for tag $CI_COMMIT_TAG"
     - |
+      echo "Creating GitLab release for tag $CI_COMMIT_TAG"
       if [ -n "$CI_COMMIT_TAG" ]; then
         echo "Tag detected: $CI_COMMIT_TAG"
         # Create release using GitLab API
