--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,82 +19,81 @@ coil = "3.3.0"
 
 [libraries]
 annotation = { module = "androidx.annotation:annotation", version.ref = "annotation" }
-guava = { group = "com.google.guava", name = "guava", version = "33.4.8-jre" }
-coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version = "1.10.2" }
-concurrent-futures = { group = "androidx.concurrent", name = "concurrent-futures-ktx", version = "1.3.0" }
+guava = { module = "com.google.guava:guava:33.4.8-jre" }
+coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.2" }
+concurrent-futures = { module = "androidx.concurrent:concurrent-futures-ktx:1.3.0" }
 
-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
-activity = { group = "androidx.activity", name = "activity-compose", version = "1.12.0-alpha06" }
-navigation = { group = "androidx.navigation", name = "navigation-compose", version = "2.9.3" }
-hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.3.0-beta01" }
-datastore = { group = "androidx.datastore", name = "datastore-preferences", version = "1.2.0-alpha02" }
+gradle = { module = "com.android.tools.build:gradle", version.ref = "androidGradlePlugin" }
+activity = { module = "androidx.activity:activity-compose:1.12.0-alpha06" }
+navigation = { module = "androidx.navigation:navigation-compose:2.9.3" }
+hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose:1.3.0-beta01" }
+datastore = { module = "androidx.datastore:datastore-preferences:1.2.0-alpha02" }
 
-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "compose" }
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
-compose-animation = { group = "androidx.compose.animation", name = "animation-graphics", version.ref = "compose" }
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
+compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+compose-ui-util = { module = "androidx.compose.ui:ui-util", version.ref = "compose" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-animation = { module = "androidx.compose.animation:animation-graphics", version.ref = "compose" }
 compose-reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.5.1" }
 
-squigglyslider = { group = "me.saket.squigglyslider", name = "squigglyslider", version = "1.0.0" }
+squigglyslider = { module = "me.saket.squigglyslider:squigglyslider:1.0.0" }
 
-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 
-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 
 materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor" }
 
-coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
-coil-network-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
+coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
 
-shimmer = { group = "com.valentinilk.shimmer", name = "compose-shimmer", version = "1.3.3" }
+shimmer = { module = "com.valentinilk.shimmer:compose-shimmer:1.3.3" }
 
-palette = { group = "androidx.palette", name = "palette-ktx", version = "1.0.0" }
+palette = { module = "androidx.palette:palette-ktx:1.0.0" }
 
-media3 = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
-media3-okhttp = { group = "androidx.media3", name = "media3-datasource-okhttp", version.ref = "media3" }
-media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
+media3 = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
+media3-okhttp = { module = "androidx.media3:media3-datasource-okhttp", version.ref = "media3" }
+media3-session = { module = "androidx.media3:media3-session", version.ref = "media3" }
 
-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 
-apache-lang3 = { group = "org.apache.commons", name = "commons-lang3", version = "3.18.0" }
+apache-lang3 = { module = "org.apache.commons:commons-lang3:3.18.0" }
 
-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 
-ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
-ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
-ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
-ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
-ktor-client-encoding = { group = "io.ktor", name = "ktor-client-encoding", version.ref = "ktor" }
-ktor-serialization-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
-
-json = { module = "org.json:json", version.ref = "json" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-client-encoding = { module = "io.ktor:ktor-client-encoding", version.ref = "ktor" }
+ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 
-brotli = { group = "org.brotli", name = "dec", version = "0.1.2" }
+json = { module = "org.json:json", version.ref = "json" }
 
-desugaring = { group = "com.android.tools", name = "desugar_jdk_libs", version = "2.1.5" }
+brotli = { module = "org.brotli:dec:0.1.2" }
 
-junit = { group = "junit", name = "junit", version = "4.13.2" }
+desugaring = { module = "com.android.tools:desugar_jdk_libs:2.1.5" }
 
-timber = { group = "com.jakewharton.timber", name = "timber", version = "5.0.1" }
+junit = { module = "junit:junit:4.13.2" }
 
-multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
+timber = { module = "com.jakewharton.timber:timber:5.0.1" }
 
-#newpipe-extractor = { group = "com.github.libre-tube", name = "NewPipeExtractor", version = "70abbdb" }
-#newpipe-extractor = { group = "com.github.TeamNewPipe", name = "NewPipeExtractor", version = "dev-SNAPSHOT" }
-newpipe-extractor = { group = "com.github.InfinityLoop1308", name = "PipePipeExtractor", version = "4240401" }
+multidex = { module = "androidx.multidex:multidex", version.ref = "multidex" }
 
-kuromoji-ipadic = { group = "com.atilika.kuromoji", name = "kuromoji-ipadic", version.ref = "kuromojiIpadic" }
+#newpipe-extractor = { module = "com.github.libre-tube:NewPipeExtractor:70abbdb" }
+#newpipe-extractor = { module = "com.github.TeamNewPipe:NewPipeExtractor:dev-SNAPSHOT" }
+newpipe-extractor = { module = "com.github.InfinityLoop1308:PipePipeExtractor:4240401" }
+
+kuromoji-ipadic = { module = "com.atilika.kuromoji:kuromoji-ipadic", version.ref = "kuromojiIpadic" }
 
 [plugins]
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
