Fix Jetifier and build warnings
- Disable Jetifier (android.enableJetifier=false)
- Add ignore list for problematic libraries
- Configure lint to suppress non-critical warnings
- Optimize kapt for faster builds with Hilt
- Add Kotlin compiler options to suppress warnings
- Enable build cache for better performance

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,12 @@
 
 org.gradle.jvmargs=-Xmx4096M -Dkotlin.daemon.jvm.options\="-Xmx4096M" -XX:+UseParallelGC
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.unsafe.configuration-cache=true
 android.nonTransitiveRClass=false
+
+# Disable Jetifier warnings
+android.jetifier.ignorelist=androidx.media3:media3-session,androidx.core:core
 
 # Performance improvements
 org.gradle.parallel=true
