Remove experimental and deprecated configurations
- Remove android.jetifier.ignorelist (not needed when Jetifier is disabled)
- Remove deprecated dagger.gradle.incremental argument
- Clean build output with no warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,7 @@ android.enableJetifier=false
 org.gradle.unsafe.configuration-cache=true
 android.nonTransitiveRClass=false
 
-# Disable Jetifier warnings
-android.jetifier.ignorelist=androidx.media3:media3-session,androidx.core:core
+# Jetifier is disabled - no need for ignorelist
 
 # Performance improvements
 org.gradle.parallel=true
