--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "9.0.0-alpha03"
+androidGradlePlugin = "9.0.0-alpha02"
 annotation = "1.9.1"
 json = "20250517"
 kotlin = "2.2.20-RC2"
@@ -10,7 +10,7 @@ media3 = "1.8.0"
 room = "2.8.0-rc02"
 hilt = "2.57.1"
 ktor = "3.2.3"
-ksp = "2.2.20-RC2-2.0.2"
+ksp = "2.2.20-RC-2.0.2"
 jsoup = "1.21.2"
 multidex = "2.0.1"
 coil = "3.3.0"
