--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ ksp = "2.2.20-RC-2.0.2"
 jsoup = "1.21.1"
 multidex = "2.0.1"
 coil = "3.3.0"
+ucrop = "2.2.8"
 guava = "33.4.8-jre"
 coroutinesGuava = "1.10.2"
 concurrentFutures = "1.3.0"
@@ -65,6 +66,7 @@ materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "ma
 
 coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
+ucrop = { module = "com.github.yalantis:ucrop", version.ref = "ucrop" }
 
 shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
 
