Improve CI/CD stability and disable Gradle caching

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,14 @@ jobs:
       - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
+          cache-disabled: true
           cache-cleanup: on-success
           
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build Release APK
-        run: ./gradlew assemble${{ matrix.abi }}Release
+        run: ./gradlew --no-configuration-cache clean assemble${{ matrix.abi }}Release --stacktrace --warning-mode all
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -85,6 +86,7 @@ jobs:
       - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
+          cache-disabled: true
           cache-cleanup: on-success
           
       - name: Grant execute permission for gradlew
@@ -95,7 +97,7 @@ jobs:
           echo "${{ secrets.DEBUG_KEYSTORE }}" | base64 -d > ./app/persistent-debug.keystore
 
       - name: Build Debug APK
-        run: ./gradlew assembleUniversalDebug
+        run: ./gradlew --no-configuration-cache clean assembleUniversalDebug --stacktrace --warning-mode all
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
