--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,9 @@ jobs:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
 
+      - name: Lint Release (app)
+        run: ./gradlew --no-configuration-cache :app:lint${{ matrix.abi }}Release --stacktrace --warning-mode all || ./gradlew :app:lintRelease
+
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
         with:
@@ -101,6 +104,9 @@ jobs:
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
+
+      - name: Lint Debug (app)
+        run: ./gradlew --no-configuration-cache :app:lintDebug --stacktrace --warning-mode all
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
