--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,9 @@ jobs:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
 
+      - name: Lint Release (app)
+        run: ./gradlew --no-configuration-cache :app:lint${{ matrix.abi }}Release --stacktrace --warning-mode all || ./gradlew :app:lintRelease
+ 
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
         with:
