--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,20 +53,30 @@ jobs:
           LASTFM_SECRET: ${{ secrets.LASTFM_SECRET }}
 
       - name: Sign APK
+        if: ${{ secrets.KEYSTORE != '' || secrets.ANDROID_SIGNING_KEY != '' }}
         uses: ilharp/sign-android-release@v2.0.0
         with:
           releaseDir: app/build/outputs/apk/${{ matrix.abi }}/release/
-          signingKey: ${{ secrets.KEYSTORE }}
+          signingKey: ${{ secrets.KEYSTORE || secrets.ANDROID_SIGNING_KEY }}
           keyAlias: ${{ secrets.KEY_ALIAS }}
           keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
           buildToolsVersion: 36.0.0
 
-      - name: Move signed APK
+      - name: Move APK (signed if available)
         run: |
           mkdir -p app/build/outputs/apk/${{ matrix.abi }}/release/out
-          find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*-signed.apk" -o -name "*-unsigned-signed.apk" \
-            | xargs -I{} mv {} app/build/outputs/apk/${{ matrix.abi }}/release/out/app-${{ matrix.abi }}-release.apk
+          SIGNED=$(find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | head -1)
+          if [ -n "$SIGNED" ]; then
+            mv "$SIGNED" app/build/outputs/apk/${{ matrix.abi }}/release/out/app-${{ matrix.abi }}-release.apk
+          else
+            # Fallback to unsigned APK (still useful for local install or later signing)
+            UNSIGNED=$(find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*.apk" | head -1)
+            if [ -z "$UNSIGNED" ]; then
+              echo "No APK found to move" && exit 1
+            fi
+            mv "$UNSIGNED" app/build/outputs/apk/${{ matrix.abi }}/release/out/app-${{ matrix.abi }}-release-unsigned.apk
+          fi
 
       - name: Upload Signed APK
         uses: actions/upload-artifact@v4
