--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,12 +72,6 @@ jobs:
     needs: check-version
     if: needs.check-version.outputs.version_changed == 'true' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    env:
-      KEYSTORE: ${{ secrets.KEYSTORE }}
-      ANDROID_SIGNING_KEY: ${{ secrets.ANDROID_SIGNING_KEY }}
-      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
     strategy:
       matrix:
         abi: [ 'arm64', 'armeabi', 'x86', 'x86_64', 'universal' ]
@@ -90,14 +84,6 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Install SDK components
-        run: |
-          sdkmanager --install "platform-tools" "platforms;android-36" "build-tools;36.0.0"
-          yes | sdkmanager --licenses
 
       - name: Set Up Gradle
         uses: gradle/actions/setup-gradle@v5
@@ -117,43 +103,34 @@ jobs:
           LASTFM_SECRET: ${{ secrets.LASTFM_SECRET }}
 
       - name: Sign APK
-        if: ${{ env.KEYSTORE != '' || env.ANDROID_SIGNING_KEY != '' }}
         uses: ilharp/sign-android-release@v2.0.0
         with:
           releaseDir: app/build/outputs/apk/${{ matrix.abi }}/release/
-          signingKey: ${{ env.KEYSTORE != '' && env.KEYSTORE || env.ANDROID_SIGNING_KEY }}
-          keyAlias: ${{ env.KEY_ALIAS }}
-          keyStorePassword: ${{ env.KEYSTORE_PASSWORD }}
-          keyPassword: ${{ env.KEY_PASSWORD }}
-          buildToolsVersion: 36.0.0
+          signingKey: ${{ secrets.KEYSTORE }}
+          keyAlias: ${{ secrets.KEY_ALIAS }}
+          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+          buildToolsVersion: 35.0.0
 
-      - name: Move and rename APK (signed if available)
+      - name: Move and rename signed APKs
         run: |
           mkdir -p app/build/outputs/apk/${{ matrix.abi }}/release/out
           
           SIGNED_APK=$(find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*-signed.apk" -o -name "*-unsigned-signed.apk" | head -1)
           
           if [ -z "$SIGNED_APK" ]; then
-            echo "No signed APK found, falling back to unsigned"
-            UNSIGNED_APK=$(find app/build/outputs/apk/${{ matrix.abi }}/release/ -name "*.apk" | head -1)
-            if [ -z "$UNSIGNED_APK" ]; then
-              echo "No APK found for ${{ matrix.abi }}"
-              ls -la app/build/outputs/apk/${{ matrix.abi }}/release/
-              exit 1
-            fi
+            echo "No signed APK found for ${{ matrix.abi }}"
+            ls -la app/build/outputs/apk/${{ matrix.abi }}/release/
+            exit 1
           fi
           
           if [ "${{ matrix.abi }}" = "universal" ]; then
-            TARGET_NAME="Metrolist${SIGNED_APK:+}.apk"
+            TARGET_NAME="Metrolist.apk"
           else
-            TARGET_NAME="app-${{ matrix.abi }}-release${SIGNED_APK:+}.apk"
+            TARGET_NAME="app-${{ matrix.abi }}-release.apk"
           fi
           
-          if [ -n "$SIGNED_APK" ]; then
-            mv "$SIGNED_APK" "app/build/outputs/apk/${{ matrix.abi }}/release/out/$TARGET_NAME"
-          else
-            mv "$UNSIGNED_APK" "app/build/outputs/apk/${{ matrix.abi }}/release/out/${TARGET_NAME/-release/-release-unsigned}"
-          fi
+          mv "$SIGNED_APK" "app/build/outputs/apk/${{ matrix.abi }}/release/out/$TARGET_NAME"
           
           echo "APK renamed to: $TARGET_NAME"
           ls -la app/build/outputs/apk/${{ matrix.abi }}/release/out/
@@ -162,8 +139,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.abi == 'universal' && 'Metrolist' || format('app-{0}-release', matrix.abi) }}
-          path: |
-            app/build/outputs/apk/${{ matrix.abi }}/release/out/*.apk
+          path: app/build/outputs/apk/${{ matrix.abi }}/release/out/${{ matrix.abi == 'universal' && 'Metrolist.apk' || format('app-{0}-release.apk', matrix.abi) }}
 
   create-release:
     needs: [check-version, build]
